# Spotify-Scannable-Downloader

./: .gitignore  Cargo.toml  README  README.md
src/: main.rs
src/core/: mod.rs
src/core/file/: download_and_save_scannable.rs  mod.rs  prepare_file_path.rs
src/core/svg/: calculate_viewbox.rs  is_background_rect.rs  is_logo_rect.rs  mod.rs  process_svg.rs  remove_logo_and_background.rs  reposition_elements.rs
src/core/uri/: build_scannable_url.rs  extract_spotify_info.rs  mod.rs
src/models/: mod.rs  spotify_info.rs
