[package]
name = "spotify-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking", "gzip"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.1", features = ["derive"] }
url = "2.3"
xmltree = "0.11.0"
bytes = "1.7.2"
usvg = { version = "0.44", features = ["fontdb"] }
tiny-skia = "0.11.4"
regex = "1.11.0"
